; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_btree.c_sqlite3BtreeCursor.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_btree.c_sqlite3BtreeCursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.KeyInfo = type { i32 }

@SQLITE_CORRUPT_BKPT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3BtreeCursor(i32* %0, i32 %1, i32 %2, %struct.KeyInfo* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.KeyInfo*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.KeyInfo* %3, %struct.KeyInfo** %9, align 8
  store i32* %4, i32** %10, align 8
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %12, 1
  br i1 %13, label %14, label %16

14:                                               ; preds = %5
  %15 = load i32, i32* @SQLITE_CORRUPT_BKPT, align 4
  store i32 %15, i32* %11, align 4
  br label %27

16:                                               ; preds = %5
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @sqlite3BtreeEnter(i32* %17)
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load %struct.KeyInfo*, %struct.KeyInfo** %9, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @btreeCursor(i32* %19, i32 %20, i32 %21, %struct.KeyInfo* %22, i32* %23)
  store i32 %24, i32* %11, align 4
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @sqlite3BtreeLeave(i32* %25)
  br label %27

27:                                               ; preds = %16, %14
  %28 = load i32, i32* %11, align 4
  ret i32 %28
}

declare dso_local i32 @sqlite3BtreeEnter(i32*) #1

declare dso_local i32 @btreeCursor(i32*, i32, i32, %struct.KeyInfo*, i32*) #1

declare dso_local i32 @sqlite3BtreeLeave(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
